kubernetes/adguardhome/pauser/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: pauser
spec:
  ports:
  - name: http
    targetPort: http
    port: 8080
    protocol: TCP
