kubernetes/adguardhome/pauser/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pauser
spec:
  ingressClassName: nginx-internal
  rules:
  - host: adguard-pauser.internal.yuha0.com
    http:
      paths:
      - backend:
          service:
            name: pauser
            port:
              number: 8080
        path: /
        pathType: Prefix
