kubernetes/adguardhome/pauser/networkpolicies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pauser
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: adguardhome
      app.kubernetes.io/component: pauser
  ingress:
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: envoy
        app.kubernetes.io/component: proxy
        gateway.envoyproxy.io/owning-gateway-name: envoy-internal
        io.kubernetes.pod.namespace: envoy-gateway-system
  egress:
  - toEntities:
    - host
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
      rules:
        dns:
        - matchPattern: "*"
  - toEndpoints:
    - matchLabels:
        app.kubernetes.io/name: adguardhome
        app.kubernetes.io/component: adguardhome
